--- a/src/assets/css/station2.css
+++ b/src/assets/css/station2.css
@@ -4,25 +4,19 @@
   width: 300px;
   height: 300px;
   background-color: #ff6666;
+  float:left;
 }
 
 #blue {
   width: 300px;
   height: 300px;
   background-color: #0000ff;
+  float:left;
 }
 
 #green {
   width: 300px;
   height: 300px;
   background-color: #3cb371;
-}
-
-.red
-{
-  float:left;
-}
-.blue
-{
-  float:right;
+  clear:both;
 }
