--- a/src/assets/css/station8.css
+++ b/src/assets/css/station8.css
@@ -10,6 +10,7 @@
 header
 {
     grid-column:1/-1;
+    grid-row:1/2;
     background-color:#0000ff;
     border:2px solid #ffffff;
 }
@@ -18,31 +19,27 @@ header
 {
     grid-column-start:1;
     grid-column-end:2;
-    grid-row-start:2;
-    grid-row-end:5;
+    grid-row:2/5;
     background-color:#888888;
     border:2px solid #ffffff;
 }
 .item2
 {
-    grid-row-start:2;
-    grid-row-start:2;
+    grid-row:2/3;
     background-color:#888888;
     border:2px solid #ffffff;
 }
 
 .item3
 {
-    grid-row-start:2;
-    grid-row-start:3;
+    grid-row:3/4;
     background-color:#888888;
     border:2px solid #ffffff;
 }
 
 .item4
 {
-    grid-row-start:2;
-    grid-row-start:4;
+    grid-row:4/5;
     background-color:#888888;
     border:2px solid #ffffff;
 }
@@ -50,6 +47,7 @@ header
 footer
 {
     grid-column:1/-1;
+    grid-row:5/6;
     background-color:#008000;
     border:2px solid #ffffff;
 }
