--- a/src/assets/css/station9.css
+++ b/src/assets/css/station9.css
@@ -1,14 +1,16 @@
 #animation
 {
+    opacity: 0;
     /*遅延時間なし*/
     animation-delay:0s;
+    /*フェードインを入れる*/
     animation : fadein 2s ease-in-out forwards;
 }
 
 @keyframes fadein
 {
     from{
-        opacity : 1;
+        opacity : 0;
     }
     to{
         opacity: 1;
